Wed Apr 25 20:20:07 CDT 2001 Adam Heath <doogie@debian.org>

  * utils/md5sum.c, lib/mlib.c: Modified mlib.c, to malloc enough space
    for the digest, instead of modifying the static buffer that was
    previously passed in.

Thu Apr 26 00:32:35 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/da.po: Updated

Wed Apr 25 18:46:47 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect/dselect.8: document dselect.cfg

Wed Apr 25 17:27:36 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/es.po: Updated

Wed Apr 25 13:15:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/dpkg.8: document dpkg.cfg

Wed Apr 25 13:05:13 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/dpkg.8: Fix formating error

Wed Apr 25 02:20:40 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/gl.po: Updated

Wed Apr 25 01:09:50 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/{ja,ru}.po: fix inconsistencies in line endings wrt \n

Wed Apr 25 00:56:14 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/ru.po: Updated

Wed Apr 25 00:29:51 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/da.po: New Danish translation
  * configure.in: add da to ALL_LINGUAS

Tue Apr 24 20:57:48 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/ja.po: Updated

Tue Apr 24 20:28:04 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/cs.po: Updated
  * po/pl.po: Updated

Tue Apr 24 17:23:05 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/main.c, po/*.po: fix typo

Tue Apr 24 14:44:28 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * bunch-o-files: move dpkg-scansources manpage to section 8

Tue Apr 24 14:31:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/rules: install enoent in the dpkg package

Tue Apr 24 14:29:03 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/rules: actually install French manpages as well

Tue Apr 24 13:38:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
