@@ -108,7 +108,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Fix formating and a typo in the dpkg manpage
   * Document the dpkg.cfg configuration file in dpkg(8)
 
- -- Wichert Akkerman <wakkerma@debian.org>  Tue, 24 Apr 2001 02:23:46 +0200
+ -- Wichert Akkerman <wakkerma@debian.org>  Thu, 26 Apr 2001 12:39:16 +0200
 
 dpkg (1.8.3.1) unstable; urgency=low
 
