@@ -1,3 +1,8 @@
+Thu Apr 26 13:36:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/md5sum.c: use libdpkg error handling since fd_md5 uses that
+    to report errors.
+
 Wed Apr 25 20:20:07 CDT 2001 Adam Heath <doogie@debian.org>
 
   * utils/md5sum.c, lib/mlib.c: Modified mlib.c, to malloc enough space
